# GraphicsLib2D

./: .gitmodules  CMakeLists.txt
Assets/Shaders/: Fragment.frag  Vertex.vert
Dependencies/: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Player.cpp  Player.h
Game/Player/: Player.cpp  Player.h
Game/ResourceManager/: ResourceManager.cpp  ResourceManager.h
GraphicsLib/: CMakeLists.txt  OpenGL.h
GraphicsLib/BaseTypes/: NonCopyableButMovable.h  Singleton.h  Transformable.cpp  Transformable.h
GraphicsLib/Camera/: Camera.cpp  Camera.h
GraphicsLib/EventSystem/: ButtonDefinisions.h  Event.h  EventDispatcher.h  Input.cpp  Input.h  KeyEvent.h  MouseEvent.h
GraphicsLib/Graphics/: GraphicsItem.cpp  GraphicsItem.h
GraphicsLib/Graphics/Animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
GraphicsLib/Graphics/Color/: Color.h
GraphicsLib/Graphics/Renderer/: Renderer.cpp  Renderer.h
GraphicsLib/Graphics/Sprite/: Sprite.cpp  Sprite.h
GraphicsLib/Graphics/Text/: Text.cpp  Text.h
GraphicsLib/Graphics/Texture/: Texture.cpp  Texture.h
GraphicsLib/Graphics/TextureAtlas/: TextureAtlas.cpp  TextureAtlas.h
GraphicsLib/Math/: AABB.h  Rect.h
GraphicsLib/RawGraphics/: ElementBufferObject.cpp  ElementBufferObject.h  Mesh.cpp  Mesh.h  RawTexture.cpp  RawTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  UniformBufferObject.cpp  UniformBufferObject.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferLayout.h  VertexBufferObject.cpp  VertexBufferObject.h
GraphicsLib/Resource/: ResourceManager.cpp  ResourceManager.h
GraphicsLib/Tools/: FreeTypeLib.cpp  FreeTypeLib.h  Initializer.h  Timer.cpp  Timer.h
GraphicsLib/Window/: Window.cpp  Window.h
